--- a/gateway/Dockerfile
+++ b/gateway/Dockerfile
@@ -11,4 +11,10 @@ COPY config.yml ./
 COPY run.sh ./
 COPY gateway.py ./
 
+RUN chmod +x ./run.sh
+
+RUN apt-get update
+RUN apt-get install dos2unix
+RUN dos2unix ./run.sh
+
 CMD ["./run.sh"]
